--- a/e3-manager/e3-manager-dao/pom.xml
+++ b/e3-manager/e3-manager-dao/pom.xml
@@ -46,5 +46,19 @@
         </dependency>
     </dependencies>
 
+    <!-- 如果不添加此节点mybatis的mapper.xml文件都会被漏掉。 -->
+    <!--<build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+    </build>-->
+
 
 </project>
