--- a/e3-manager/e3-manager-pojo/pom.xml
+++ b/e3-manager/e3-manager-pojo/pom.xml
@@ -12,5 +12,16 @@
     <artifactId>e3-manager-pojo</artifactId>
     <packaging>jar</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
