--- a/e3-manager/e3-manager-service/pom.xml
+++ b/e3-manager/e3-manager-service/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>e3-manager-service</artifactId>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <dependencies>
         <dependency>
